syntax = "proto3";

package catan;

service catan {
  // הרשמה / כניסה
  rpc register(RegisterRequest) returns (ConnectionResponse);
  rpc login(LoginRequest) returns (ConnectionResponse);
  rpc sendRegisterOtp (EmailRequest) returns (ConnectionResponse);
  rpc sendLoginOtp (EmailRequest) returns (ConnectionResponse);
  rpc verifyRegisterOtp(VerifyOtpRequest) returns (ConnectionResponse);
  rpc verifyLoginOtp(VerifyOtpRequest) returns (ConnectionResponse);

  // ניהול משחק
  rpc createGame(CreateGameRequest) returns (GameResponse);
  rpc inviteToGame(InviteRequest) returns (GameResponse);
  rpc respondToInvitation(InviteResponse) returns (GameResponse);
  rpc startGame(GameActionRequest) returns (GameResponse);
  rpc endGame(GameActionRequest) returns (GameResponse);
  rpc leaveGame(GameActionRequest) returns (GameResponse);
  rpc pauseGame(GameActionRequest) returns (GameResponse);
  rpc getJoinableGames(Empty) returns (JoinableGamesResponse);

  // פעולות שחקן במשחק
  rpc buildSettlement(BuildRequest) returns (GameResponse);
  rpc promoteToCity(BuildRequest) returns (GameResponse);
  rpc buildRoad(BuildRequest) returns (GameResponse);
  rpc rollDices(GameActionRequest) returns (DiceRollResponse);
  rpc moveRobber(MoveRobberRequest) returns (GameResponse);
  rpc stealCardFromPlayer(StealRequest) returns (GameResponse);
  rpc endTurn(GameActionRequest) returns (GameResponse);

  // קלפי פיתוח
  rpc buyDevelopmentCard(BuyDevCardRequest) returns (GameResponse);
  rpc playDevelopmentCard(PlayDevCardRequest) returns (GameResponse);
  rpc monopolyCardUse(MonopolyUseRequest) returns (GameResponse);
  rpc roadBuildingCardUse(RoadBuildingRequest) returns (GameResponse);

  // תור ותחזוקה
  rpc discardHalfResources(DiscardRequest) returns (GameResponse);
  rpc getPlayerInfo(PlayerInfoRequest) returns (PlayerInfoResponse);

  // מסחר
  rpc tradeRequest(TradeRequest) returns (TradeResponse);
  rpc respondToTrade(TradeResponse) returns (TradeResult);

  // ניהול שחקנים
  rpc kickPlayer(KickRequest) returns (GameResponse);
  rpc reportPlayer(ReportRequest) returns (GameResponse);

  // צ'אט ומשוב
  rpc sendMessage(Message) returns (ACK);
  rpc SubscribeMessages(ChatSubscribeRequest) returns (stream Message);
  rpc subscribeToGameEvents(GameSubscribeRequest) returns (stream GameEvent);
}

// ========== הודעות בסיסיות ==========

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message EmailRequest {
  string email = 1;
}

message VerifyOtpRequest {
  string email = 1;
  string otp = 2;
}

message ConnectionResponse {
  string username = 1;
  bool success = 2;
  repeated string errors = 3;
  string message = 4;
  string userId = 5;
}

// ========== משחקים ==========

message CreateGameRequest {
  string creatorId = 1;
}

message InviteRequest {
  string gameId = 1;
  string invitedUserId = 2;
}

message InviteResponse {
  string gameId = 1;
  string userId = 2;
  bool accepted = 3;
}

message GameActionRequest {
  string gameId = 1;
  string userId = 2;
}

message GameResponse {
  bool success = 1;
  string message = 2;
  string gameId = 3;
}

message JoinableGamesResponse {
  repeated string gameIds = 1;
}

// ========== בנייה ==========

message BuildRequest {
  string gameId = 1;
  string userId = 2;
  int32 x = 3;
  int32 y = 4;
}

message MoveRobberRequest {
  string gameId = 1;
  int32 tileX = 2;
  int32 tileY = 3;
}

message StealRequest {
  string gameId = 1;
  string fromUserId = 2;
  string toUserId = 3;
}

// ========== קלפי פיתוח ==========

message BuyDevCardRequest {
  string gameId = 1;
  string userId = 2;
}

message PlayDevCardRequest {
  string gameId = 1;
  string userId = 2;
  string cardType = 3;
}

message MonopolyUseRequest {
  string gameId = 1;
  string userId = 2;
  string resourceType = 3;
}

message RoadBuildingRequest {
  string gameId = 1;
  string userId = 2;
  repeated BuildRequest roads = 3; // שתי דרכים
}

// ========== תור ==========

message DiscardRequest {
  string userId = 1;
  string gameId = 2;
  repeated string discardedResources = 3;
}

message DiceRollResponse {
  int32 firstDie = 1;
  int32 secondDie = 2;
  int32 total = 3;
}

// ========== מידע ==========

message PlayerInfoRequest {
  string userId = 1;
  string gameId = 2;
}

message PlayerInfoResponse {
  string username = 1;
  repeated string resources = 2;
  int32 settlements = 3;
  int32 cities = 4;
  int32 roads = 5;
}

// ========== מסחר ==========

message TradeRequest {
  string gameId = 1;
  string fromUserId = 2;
  string toUserId = 3;
  map<string, int32> offer = 4;
  map<string, int32> request = 5;
}

message TradeResponse {
  string gameId = 1;
  string fromUserId = 2;
  string toUserId = 3;
  bool accepted = 4;
}

message TradeResult {
  bool success = 1;
  string message = 2;
}

// ========== צ'אט ואירועים ==========

message Message {
  string gameId = 1;
  string fromUserId = 2;
  string content = 3;
  int64 timestamp = 4;
}

message ChatSubscribeRequest {
  string gameId = 1;
  string userId = 2;
}

message ACK {
  bool received = 1;
}

message GameSubscribeRequest {
  string gameId = 1;
  string userId = 2;
}

message GameEvent {
  string type = 1;
  string description = 2;
  int64 timestamp = 3;
}

// ========== ניהול שחקנים ==========

message KickRequest {
  string gameId = 1;
  string adminUserId = 2;
  string targetUserId = 3;
}

message ReportRequest {
  string reportedUserId = 1;
  string reporterUserId = 2;
  string reason = 3;
}

message Empty {}
